Update: APOD api and space image enpoint added
